data/derived/fa15/progs/unify/prog2306.ml.out
Characters 164-168:
  let (_, res) = List.fold_left f base args in
                                  ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
